--- Auto-Git Commit ---

--- a/roles/01-create-infrastructure/tasks/main.yml
+++ b/roles/01-create-infrastructure/tasks/main.yml
@@ -2,5 +2,6 @@
 # tasks file for create-infrastructure
 
 - include:  setupsl.yml
-- include:  orderslvms.yml
+- include:  download_iso.yml
+- include:  create_helper.yml
 - include: updatelocalhostfile.yml
