--- a/roles/update-pakhelper-nodes/tasks/setup_pak_helper.yml
+++ b/roles/update-pakhelper-nodes/tasks/setup_pak_helper.yml
@@ -7,6 +7,12 @@
         name: yum-utils
         state: latest
 
+    - name: Install python3
+      yum:
+        name: python3
+        state: latest
+
+
     - name: Install device-mapper-persistent-data
       yum:
         name: device-mapper-persistent-data
